update: api doc
